fix z-index of happening cards
trying to fix the topic cards on mobile as well

--- a/_assets/stylesheets/_cards.scss
+++ b/_assets/stylesheets/_cards.scss
@@ -77,7 +77,6 @@
 // Fix for fading placeholder images in
 .card-title--overlap {
   position: relative;
-  z-index: 1;
 }
 
 .card {
