--- a/_assets/stylesheets/_topic-cards.scss
+++ b/_assets/stylesheets/_topic-cards.scss
@@ -66,21 +66,29 @@
     margin: 119px 0 8rem;
 }
 
-@media (min-width: 992px) {
-  .topic-card-simple {
-      width: calc(20% - 4px);
-  }
-}
-@media (min-width: 768px) {
-  .topic-card-simple {
-      width: calc(20% - 4px);
-  }
-}
-
 .card-deck--expanded-layout
 .card.topic-card-simple {
-    max-width: 20%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  max-width: 20%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @media (min-width: $screen-sm) {
+    .topic-card-simple {
+        width: calc(20% - 4px);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+  }
+
+  @media (min-width: $screen-md) {
+    .topic-card-simple {
+        width: calc(20% - 4px);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+  }
+
 }
